Add Radix UI components and enhance layout functionality
- Introduced new dependencies: @radix-ui/react-scroll-area and @radix-ui/react-select for improved UI components.
- Updated AppLayout to manage selected items from the Marketplace and integrated MarketplaceContent for displaying item details.
- Enhanced Sidebar to support item selection and display based on the active view.
- Refined ActivityBar button styling for better visual feedback on active states.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate": "pwa-assets-generator --preset minimal-2023 public/vite.svg"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
